Identify sub expressions